package com.example.budgetbuddy.ui.screens.transactions.detail

const val TestTagDetailTransactionScreenTitle = "TestTagDetailTransactionScreenTitle"
const val TestTagDetailTransactionCategory = "TestTagDetailTransactionCategory"
const val TestTagDetailTransactionPrice = "TestTagDetailTransactionPrice"
const val TestTagDetailTransactionType = "TestTagDetailTransactionType"
const val TestTagDetailTransactionDate = "TestTagDetailTransactionDate"
const val TestTagDetailTransactionNote = "TestTagDetailTransactionNote"
const val TestTagDetailTransactionPlace = "TestTagDetailTransactionPlace"
const val TestTagDetailTransactionDeleteButton = "TestTagDetailTransactionDeleteButton"
const val TestTagDetailTransactionEditButton = "TestTagDetailTransactionEditButton"

