package com.example.budgetbuddy.ui.screens.auth.login

const val TestTagLoginScreenForm = "TestTagLoginScreenForm"
const val TestTagLoginScreenEmailInput = "TestTagLoginScreenEmailInput"
const val TestTagLoginScreenPasswordInput = "TestTagLoginScreenPasswordInput"
const val TestTagLoginScreenSubmitButton = "TestTagLoginScreenSubmitButton"
const val TestTagLoginScreenSignUpButton = "TestTagLoginScreenSignUpButton"
const val TestTagLoginScreenForgottenPassword = "TestTagLoginScreenForgottenPassword"

